--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ p {
     min-height: 250px;
     text-align: center;
     color: #fff;
-    background: #9480e4 url("/images/bg.jpg");
+    background: #9480e4 url("img/bg.jpg");
     background-size: cover;
     padding-bottom: 1.5em;
 }
